--- a/src/platform/site-wide/sass/modules/_m-vet-nav.scss
+++ b/src/platform/site-wide/sass/modules/_m-vet-nav.scss
@@ -398,7 +398,7 @@ body.va-pos-fixed {
   }
 
   @include media($medium-large-screen) {
-    flex: 0 1 32.5rem;
+    flex: 0 1 30.5rem;
     margin-left: 0;
     margin-right: 0;
     z-index: 3;
